--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  # State management
+  flutter_bloc: ^8.1.3
+
+  # Localization
+  easy_localization: ^3.0.3
+
+  # UI enhancements
+  flutter_svg: ^2.0.9
+  google_fonts: ^6.1.0
+  flutter_screenutil: ^5.9.0
+  dio: ^5.4.0
+  shared_preferences: ^2.2.3
+  equatable: ^2.0.5
+
+  # Animations
+  lottie: ^3.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -57,10 +74,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Assets
+  assets:
+    - assets/images/
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
